<resources>
    <string name="app_name">demoapps</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="map_api_key">AIzaSyDnulUFO7umIYyZgKNVzhxNywiDULn04_A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reply_label">ReplyMsg</string>
    <string name="Reply_Msg">Reply</string>

    <string name="facebook_app_id">1081651199348146</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


    <string name="Home">Home</string>
    <string name="FileOperation">File Operation</string>
    <string name="SocailLogin">Social Login</string>
    <string name="Firebase">Firebase</string>
    <string name="BottomMenu">Bottom Menu</string>
    <string name="Notification">Notification</string>
    <string name="GoogleMap">Google Map</string>
    <string name="ApiCalling">Api Calling</string>
    <string name="CanvasDraw">Canvas Drawing</string>
    <string name="LogOut">Log Out</string>


</resources>