<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/Home"
        android:id="@+id/nav_home"
        />
    <item android:title="@string/FileOperation"
        android:id="@+id/nav_file_operation"
        />
    <item android:title="@string/SocailLogin"
        android:id="@+id/nav_social"
        />
    <item android:title="@string/Firebase"
        android:id="@+id/nav_firebase"
        />
    <item android:title="@string/BottomMenu"
        android:id="@+id/nav_bottom_menu"
        />
    <item android:title="@string/Notification"
        android:id="@+id/nav_notify"
        />
    <item android:title="@string/GoogleMap"
        android:id="@+id/nav_google_map"
        />
    <item android:title="@string/ApiCalling"
        android:id="@+id/nav_api"
        />
    <item android:title="@string/CanvasDraw"
        android:id="@+id/nav_drawing"
        />
    <item android:title="@string/LogOut"
        android:id="@+id/nav_logout"
        />
</menu>